@@ -11,26 +11,26 @@ import com.github.dockerjava.core.command.PullImageResultCallback;
 import org.springframework.beans.factory.annotation.Value;
 
 import java.io.File;
-import java.util.List;
+import java.util.Arrays;
 
 /**
  * Created by lily via on 2024/4/19 9:54
  */
 public class FirstInitJob {
 
-    @Value("${Docker.host:127.0.0.1}")
-    public static String host;
+//    @Value("${Docker.host:127.0.0.1}")
+    public static String host = "192.168.70.130";
 
-    @Value("${Docker.host:2375}")
-    public static String port;
+//    @Value("${Docker.host:2375}")
+    public static String port = "2375";
 
-    @Value("${Docker.Bind.path}")
+//    @Value("${Docker.Bind.path}")
     public static String bindPath = File.separator + "home" + File.separator + "lily" + File.separator + "oj-codeSandbox";
 
-    @Value("${Docker.Bind.volume}")
+//    @Value("${Docker.Bind.volume}")
     public static String volume = File.separator + "app";
 
-    private static Boolean FIRST_INIT = false;
+    private static Boolean FIRST_INIT = true;
 
     public static String containerId = "5af9c3b31b879bc3de6e03621959045762ceb41fde0f1c8acdcdab0f03b918c1";
 
@@ -60,7 +60,7 @@ public class FirstInitJob {
         hostConfig.withMemory(1024 * 1024 * 1024L);
         hostConfig.withMemorySwap(0L);
         hostConfig.withCpusetCpus("0");
-        hostConfig.withSecurityOpts(List.of("no-new-privileges"));
+        hostConfig.withSecurityOpts(Arrays.asList("no-new-privileges"));
         // 服务器路径与容器内部路径映射
         hostConfig.setBinds(new Bind(bindPath, new Volume(volume)));
 //         3.2 配置容器挂载  交互式容器创建命令
